--- a/app/templates/patient_user/choose_therapist.html
+++ b/app/templates/patient_user/choose_therapist.html
@@ -2,12 +2,7 @@
 
 {% block head %}
 
-<style>
-    .square-box {
-        max-width: 1500px;
-        min-height: 400px;
-    }
-</style>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/stylesheet.css') }}">
 
 {% endblock %}
 
