--- a/app/templates/errors/401.html
+++ b/app/templates/errors/401.html
@@ -1,9 +1,15 @@
 {% extends "base.html" %}
 
+{% block head %}
+
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'css/stylesheet.css') }}">
+
+{% endblock %}
+
 {% block content %}
 
 <div class="container mt-3">
-    <div class="card">
+    <div class="card centered text-center">
         <div class="card-header">
             <h3> 401 Error Encountered </h3>
         </div>
