--- a/app/templates/landing_page.html
+++ b/app/templates/landing_page.html
@@ -1,14 +1,8 @@
 {% extends "base.html" %}
 
-{% block head %}
-
-<link rel="stylesheet" href="{{ url_for('static', filename='css/stylesheet.css') }}">
-
-{% endblock %}
-
 {% block content %}
 
-<div class="flex-container" style="overflow: hidden; background-color:#608DF7;">
+<div class="flex-container" style="overflow: hidden;">
     <div class="row">
         <div class="col-12">
             <div class="p-5 text-center">
