--- a/app/templates/questionnaires/GAD7.html
+++ b/app/templates/questionnaires/GAD7.html
@@ -2,6 +2,8 @@
 
 {% block head %}
 
+<link rel="stylesheet" href="{{ url_for('static', filename='css/stylesheet.css') }}">
+
 <style>
     .quiz-position {
         min-height: 700px;
