--- a/app/templates/therapist_user/therapist_dash.html
+++ b/app/templates/therapist_user/therapist_dash.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 
+{% block head %}
+
+<link rel="stylesheet" href="{{ url_for('static', filename='css/stylesheet.css') }}">
+
+{% endblock %}
+
 {% block content %}
 
 <div class="flex-container" style="overflow: hidden;">
