--- a/app/templates/therapy/therapy_screen.html
+++ b/app/templates/therapy/therapy_screen.html
@@ -1,15 +1,11 @@
 {% extends "base.html" %}
 
-{% block head %}
-
-{% endblock %}
-
 {% block content %}
 
 <div class="flex-container" style="overflow: hidden;">
     <div class="row">
         <div class="col-12">
-            <div class="p-5 text-center bg-light">
+            <div class="p-5 text-center">
                 <h1 class="mb-3"> Therapy Session </h1>
                 <h4> Conduct therapy sessions with the aid of emotional recognition technology </h4>
             </div>
