Added ability to delete account. Needs re-worked at some point as it throws an error if the patient has no associated data. Also does not delete questionnaire data

--- a/app/templates/landing_page.html
+++ b/app/templates/landing_page.html
@@ -17,9 +17,11 @@
 <div class="container">
     <div class="row">
         <div class="col-6 mt-3">
-            <h2> Emotional Recognition Capability </h2>
+            <h2> The Project </h2>
             <p> 
-                Lorem Ipsum Etc Etc...
+                This project seeks to provide additional insights into a persons mental health by using an 
+                emotional recognition model during psychlogical screening such as therapy sessions and 
+                self-screening questionnaires. 
             </p>
         </div>
     </div>
