--- a/app/templates/questionnaires/GAD7.html
+++ b/app/templates/questionnaires/GAD7.html
@@ -92,38 +92,38 @@
                 <div class="question" id="question1">
                     <label for="{{ form.question1.id }}">{{ form.question1.label}}</label>
                     <div class="radio-wrapper">
-                        {{ form.question1 (name='question1') }}
+                        {{ form.question1 (name='question1', style="list-style:none;") }}
                     </div>
                 </div>
 
                 <div class="question" id="question2" style="display: none;">
                     <label for="{{ form.question2.id }}">{{ form.question2.label }}</label>
-                    {{ form.question2 (name='question2') }}
+                    {{ form.question2 (name='question2', style="list-style:none;") }}
                 </div>
 
                 <div class="question" id="question3" style="display: none;">
                     <label for="{{ form.question3.id }}">{{ form.question3.label }}</label>
-                    {{ form.question3 (name='question3') }}
+                    {{ form.question3 (name='question3', style="list-style:none;") }}
                 </div>
 
                 <div class="question" id="question4" style="display: none;">
                     <label for="{{ form.question4.id }}">{{ form.question4.label }}</label>
-                    {{ form.question4 (name='question4') }}
+                    {{ form.question4 (name='question4', style="list-style:none;") }}
                 </div>
 
                 <div class="question" id="question5" style="display: none;">
                     <label for="{{ form.question5.id }}">{{ form.question5.label }}</label>
-                    {{ form.question5 (name='question5') }}
+                    {{ form.question5 (name='question5', style="list-style:none;") }}
                 </div>
 
                 <div class="question" id="question6" style="display: none;">
                     <label for="{{ form.question6.id }}">{{ form.question6.label }}</label>
-                    {{ form.question6 (name='question6') }}
+                    {{ form.question6 (name='question6', style="list-style:none;") }}
                 </div>
 
                 <div class="question" id="question7" style="display: none;">
                     <label for="{{ form.question7.id }}">{{ form.question7.label }}</label>
-                    {{ form.question7 (name='question7') }}
+                    {{ form.question7 (name='question7', style="list-style:none;") }}
                 </div>
 
                 <button class="btn btn-secondary" id="last" type="button" onclick="previousQuestion();">Previous</button>
