--- a/app/templates/therapist_user/therapist_dash.html
+++ b/app/templates/therapist_user/therapist_dash.html
@@ -11,7 +11,7 @@
 <div class="flex-container" style="overflow: hidden;">
     <div class="row">
         <div class="col-12">
-            <div class="p-5 text-center bg-light">
+            <div class="p-5 text-center">
                 <h1 class="mb-3"> Therapist Users Dashboard </h1>
                 <h3 class="mb-3"> Review your current patients and your conducted sessions from this screen</h3>
             </div>
