--- a/app/templates/patient_user/patient_profile.html
+++ b/app/templates/patient_user/patient_profile.html
@@ -102,7 +102,8 @@
                 </div>
                 <div class="card-body">
                     {% if most_recent_session %}
-                    <h5> Session Emotional State: {{ most_recent_session.emotional_state }}</h5>
+                    <h5 class="mb-2"> Session Date: {{ most_recent_session.session_start_time.strftime('%d/%m/%Y') }} </h5>
+                    <h5 class="mb-2"> Session Time: {{ most_recent_session.session_start_time.strftime('%H:%M') }}</h5>
                     <div class="chart_container d-flex justify-content-center" style="height: 340px; width: 100%;">
                         <canvas id="recent_session_pie_chart"></canvas>
                     </div>
