--- a/app/templates/questionnaires/PHQ9.html
+++ b/app/templates/questionnaires/PHQ9.html
@@ -9,6 +9,7 @@
         min-height: 700px;
         max-width: 900px;
     }
+
 </style>
 
 {% endblock %}
@@ -92,47 +93,47 @@
 
                 <div class="question" id="question1">
                     <label for="{{ form.question1.id }}">{{ form.question1.label }}</label>
-                    {{ form.question1 (name='question1') }}
+                    {{ form.question1 (name='question1', style="list-style:none;") }} 
                 </div>
 
                 <div class="question" id="question2" style="display: none;">
                     <label for="{{ form.question2.id }}">{{ form.question2.label }}</label>
-                    {{ form.question2 (name='question2') }}
+                    {{ form.question2 (name='question2', style="list-style:none;") }}
                 </div>
 
                 <div class="question" id="question3" style="display: none;">
                     <label for="{{ form.question3.id }}">{{ form.question3.label }}</label>
-                    {{ form.question3 (name='question3') }}
+                    {{ form.question3 (name='question3', style="list-style:none;") }}
                 </div>
 
                 <div class="question" id="question4" style="display: none;">
                     <label for="{{ form.question4.id }}">{{ form.question4.label }}</label>
-                    {{ form.question4 (name='question4') }}
+                    {{ form.question4 (name='question4', style="list-style:none;") }}
                 </div>
 
                 <div class="question" id="question5" style="display: none;">
                     <label for="{{ form.question5.id }}">{{ form.question5.label }}</label>
-                    {{ form.question5 (name='question5') }}
+                    {{ form.question5 (name='question5', style="list-style:none;") }}
                 </div>
 
                 <div class="question" id="question6" style="display: none;">
                     <label for="{{ form.question6.id }}">{{ form.question6.label }}</label>
-                    {{ form.question6 (name='question6') }}
+                    {{ form.question6 (name='question6', style="list-style:none;") }}
                 </div>
 
                 <div class="question" id="question7" style="display: none;">
                     <label for="{{ form.question7.id }}">{{ form.question7.label }}</label>
-                    {{ form.question7 (name='question7') }}
+                    {{ form.question7 (name='question7', style="list-style:none;") }}
                 </div>
 
                 <div class="question" id="question8" style="display: none;">
                     <label for="{{ form.question8.id }}">{{ form.question8.label }}</label>
-                    {{ form.question8 (name='question8') }}
+                    {{ form.question8 (name='question8', style="list-style:none;") }}
                 </div>
 
                 <div class="question" id="question9" style="display: none;">
                     <label for="{{ form.question9.id }}">{{ form.question9.label }}</label>
-                    {{ form.question9 (name='question9') }}
+                    {{ form.question9 (name='question9', style="list-style:none;") }}
                 </div>
 
                 <button class="btn btn-secondary" id="last" type="button" onclick="previousQuestion();">Previous</button>
