Some further work. Inital attempt at responsiveness. May need to re-factor static/templates into relevant packages

--- a/app/templates/patient_user/patient_profile.html
+++ b/app/templates/patient_user/patient_profile.html
@@ -22,7 +22,7 @@
 
 <div class="container">
     <div class="row mt-4 mb-4">
-        <div class="col-6">
+        <div class="col-lg-6 col-sm-12 ">
             <div class="card text-center">
                 <div class="card-header">
                     <h3> Patient Information </h3>
@@ -46,7 +46,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-6">
+        <div class="col-lg-6 col-sm-12">
             <div class="card text-center">
                 <div class="card-header">
                     <h3> Questionnaire Information </h3>
@@ -95,7 +95,7 @@
     </div>
 
     <div class="row">
-        <div class="col-6">
+        <div class="col-lg-6 col-sm-12">
             <div class="card mb-3 text-center">
                 <div class="card-header">
                     <h3> Most Recent Therapy Session </h3>
@@ -120,7 +120,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-6">
+        <div class="col-lg-6 col-sm-12">
             <div class="card text-center">
                 <div class="card-header">
                     <h3> Previous Therapy Sessions </h3>
