--- a/app/templates/patient_user/previous_gad.html
+++ b/app/templates/patient_user/previous_gad.html
@@ -39,7 +39,7 @@
     </div>
     <div class="row">
         <div class="col-6">
-            <div class="card text-center">
+            <div class="card text-center mb-2">
                 <div class="card-header text-center">
                     <h3> Previous Attempts/Score Information </h3>
                 </div>
