--- a/app/templates/therapist_user/therapist_dash.html
+++ b/app/templates/therapist_user/therapist_dash.html
@@ -24,7 +24,7 @@
         <div class="col-6">
             <div class="card">
                 <div class="card-header">
-                    <h3> Therapist User Details </h3>
+                    <h3 class="text-center"> Therapist User Details </h3>
                 </div>
                 <div class="card-body">
                     <p> <strong>Therapist Name: </strong>{{ therapist.first_name + " " + therapist.surname }} </p>
@@ -37,7 +37,7 @@
         <div class="col-6">
             <div class="card">
                 <div class="card-header">
-                    <h3> Your Current Patients </h3>
+                    <h3 class="text-center"> Your Current Patients </h3>
                 </div>
                 <div class="card-body">
                     {% if current_patients %}
@@ -73,7 +73,7 @@
         <div class="col-6">
             <div class="card">
                 <div class="card-header">
-                    <h3> Your Previously Conducted Sessions </h3>
+                    <h3 class="text-center"> Your Previously Conducted Sessions </h3>
                 </div>
                 <div class="card-body">
                     {% if conducted_sessions_data %}
