--- a/app/templates/patient_user/choose_therapist.html
+++ b/app/templates/patient_user/choose_therapist.html
@@ -12,8 +12,8 @@
     <div class="row">
         <div class="col-6">
             <div class="card">
-                <div class="card-header align-text-center">
-                    <h2>Choosing a Therapist</h2>
+                <div class="card-header">
+                    <h2 class="text-center">Choosing a Therapist</h2>
                 </div>
                 <div class="card-body">
                     <p> 
@@ -27,8 +27,8 @@
         </div>
         <div class="col-6">
             <div class="card">
-                <div class="card-header align-text-center">
-                    <h3> Currently Available Therapists </h3>
+                <div class="card-header">
+                    <h3 class="text-center"> Currently Available Therapists </h3>
                 </div>
                 <div class="card-body">
                     {% if therapist_list is not none %}
