--- a/app/templates/patient_user/patient_profile.html
+++ b/app/templates/patient_user/patient_profile.html
@@ -23,8 +23,8 @@
 <div class="container">
     <div class="row mt-4 mb-4">
         <div class="col-lg-6 col-sm-12 ">
-            <div class="card text-center">
-                <div class="card-header">
+            <div class="card">
+                <div class="card-header text-center">
                     <h3> Patient Information </h3>
                 </div>
                 <div class="card-body">
@@ -39,7 +39,7 @@
                     </p>
                     {% endif %}
                 </div>
-                <div class="card-footer">
+                <div class="card-footer text-center">
                     <a href="{{ url_for('auth.update_details') }}" class="btn btn-secondary">Change User Details</a>
                     <a href="{{ url_for('main.choose_therapist_page') }}" class="btn btn-secondary">Select/Update Therapist</a>
                     <a href="{{ url_for('main.delete_account', patient_id = patient.id) }}" class="btn btn-danger"> Delete Account </a>
