--- a/app/templates/patient_user/specific_session_page.html
+++ b/app/templates/patient_user/specific_session_page.html
@@ -13,7 +13,7 @@
         <div class="col-6">
             <div class="card">
                 <div class="card-header">
-                    <h3> Session Information </h3>
+                    <h3 class="text-center"> Session Information </h3>
                 </div>
                 <div class="card-body">
                     <div class="row">
@@ -35,7 +35,7 @@
             </div>
             <div class="card mt-3">
                 <div class="card-header">
-                    <h3> Session Emotions </h3>
+                    <h3 class="text-center"> Session Emotions </h3>
                 </div>
                 <div class="card-body">
                     <table id="emotions_table" class="cell-border">
@@ -60,7 +60,7 @@
         <div class="col-6">
             <div class="card">
                 <div class="card-header">
-                    <h3> Session Emotional Distribution Chart </h3>
+                    <h3 class="text-center"> Session Emotional Distribution Chart </h3>
                 </div>
                 <div class="card-body">
                     <div class="chart_container d-flex justify-content-center" style="height: 400px; width: 100%">
