--- a/app/templates/patient_user/patient_profile.html
+++ b/app/templates/patient_user/patient_profile.html
@@ -14,7 +14,7 @@
         <div class="col-12">
             <div class="p-5 text-center">
                 <h1 class="mb-3"> Patient Users Dashboard </h1>
-                <h3 class="mb-3"> Review data captured during your previous therapy sessions and questionnaire attempts </h3>
+                <h3 class="mb-3"> Review data captured during previous therapy sessions and questionnaire attempts </h3>
             </div>
         </div>
     </div>
