--- a/app/templates/patient_user/previous_phq.html
+++ b/app/templates/patient_user/previous_phq.html
@@ -78,7 +78,7 @@
         </div>
         <div class="col-6">
             <div class="card">
-                <div class="card-header">
+                <div class="card-header text-center">
                     <h3> Previous Captured Emotional States </h3>
                 </div>
                 <div class="card-body">
