--- a/app/templates/therapist_user/therapist_dash.html
+++ b/app/templates/therapist_user/therapist_dash.html
@@ -71,7 +71,7 @@
 
     <div class="row mt-3">
         <div class="col-6">
-            <div class="card">
+            <div class="card mb-2">
                 <div class="card-header">
                     <h3 class="text-center"> Your Previously Conducted Sessions </h3>
                 </div>
