General changes and removed redundant part of predict_emotions function

--- a/app/templates/patient_user/patient_profile.html
+++ b/app/templates/patient_user/patient_profile.html
@@ -40,9 +40,15 @@
                     {% endif %}
                 </div>
                 <div class="card-footer text-center">
+                    {% if current_user.type == "patient" %}
                     <a href="{{ url_for('auth.update_details') }}" class="btn btn-secondary">Change User Details</a>
                     <a href="{{ url_for('main.choose_therapist_page') }}" class="btn btn-secondary">Select/Update Therapist</a>
-                    <a href="{{ url_for('main.delete_account', patient_id = patient.id) }}" class="btn btn-danger"> Delete Account </a>
+                    <a href="{{ url_for('main.delete_account', patient_id = patient.id) }}" class="btn btn-danger">Delete Account</a>
+                    {% elif current_user.type == "therapist" %}
+                    <button type="button" class="btn btn-secondary" disabled>Change User Details</button>
+                    <button type="button" class="btn btn-secondary" disabled>Select/Update Therapist</button>
+                    <button type="button" class="btn btn-danger" disabled>Delete Account</button>
+                    {% endif %}
                 </div>
             </div>
         </div>
