--- a/app/templates/questionnaires/GAD7.html
+++ b/app/templates/questionnaires/GAD7.html
@@ -26,7 +26,7 @@
                     <h3> GAD-7 Score Results </h3>
                 </div>
                 <div class="card-body">
-                    <h5> GAD-7 Score: {{ score }} </h5>
+                    <h5 class="text-center"> GAD-7 Score: {{ score }} </h5>
                     <p> {{ gad_message }} </p>
                 </div>
             </div>
@@ -35,7 +35,7 @@
                     <h3> Emotional State Results </h3>
                 </div>
                 <div class="card-body">
-                    <h5> Emotional State Captured: {{ emotional_state }}</h5>
+                    <h5 class="text-center"> Emotional State Captured: {{ emotional_state }}</h5>
                     <p>{{ emotional_state_message }}</p>
                 </div>
             </div>
