Different model now in use, 66% accuracy on validation dataset and 65% accuracy on testing dataset.

--- a/app/templates/therapist_user/therapist_dash.html
+++ b/app/templates/therapist_user/therapist_dash.html
@@ -31,6 +31,10 @@
                     <p> <strong>Email: </strong> {{ therapist.email }} </p>
                     <p> <strong> Number of Current Patients: </strong> {{ patient_count }} </p>
                 </div>
+                <div class="card-footer text-center">
+                    <button type="button" class="btn btn-secondary">Update User Details</button>
+                    <button type="button" class="btn btn-danger">Delete Account</button>
+                </div>
             </div>
         </div>
         
