--- a/app/templates/therapist_user/therapist_dash.html
+++ b/app/templates/therapist_user/therapist_dash.html
@@ -22,7 +22,7 @@
 <div class="container">
     <div class="row mt-3">
         <div class="col-6">
-            <div class="card">
+            <div class="card text-center">
                 <div class="card-header">
                     <h3 class="text-center"> Therapist User Details </h3>
                 </div>
@@ -33,7 +33,6 @@
                 </div>
                 <div class="card-footer text-center">
                     <button type="button" class="btn btn-secondary">Update User Details</button>
-                    <button type="button" class="btn btn-danger">Delete Account</button>
                 </div>
             </div>
         </div>
