--- a/app/templates/questionnaires/PHQ9.html
+++ b/app/templates/questionnaires/PHQ9.html
@@ -26,7 +26,7 @@
                     <h3> PHQ-9 Score Results </h3>
                 </div>
                 <div class="card-body">
-                    <h5> PHQ-9 Score: {{ score }} </h5>
+                    <h5 class="center"> PHQ-9 Score: {{ score }} </h5>
                     <p> {{ phq_message }} </p>
                 </div>
             </div>
@@ -35,7 +35,7 @@
                     <h3> Emotional State Results </h3>
                 </div>
                 <div class="card-body">
-                    <h5> Emotional State Captured: {{ emotional_state }}</h5>
+                    <h5 class="text-center"> Emotional State Captured: {{ emotional_state }}</h5>
                     <p> {{ emotional_state_message }}</p>
                 </div>
             </div>
