--- a/app/templates/patient_user/choose_therapist.html
+++ b/app/templates/patient_user/choose_therapist.html
@@ -8,6 +8,19 @@
 
 {% block content %}
 
+<div class="flex-container" style="overflow: hidden;">
+    <div class="row">
+        <div class="col-12">
+            <div class="p-5 text-center">
+                <h1 class="mb-3"> Choose Therapist Page</h1>
+                <h3 class="mb-3"> 
+                    Designate a therapist to your personal patient account
+                </h3>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="container mt-4 justify-content-center align-items-center">
     <div class="row">
         <div class="col-6">
