--- a/app/templates/patient_user/patient_profile.html
+++ b/app/templates/patient_user/patient_profile.html
@@ -149,7 +149,7 @@
                                 <td> {{ session.session_start_time.strftime('%H:%M')}} </td>
                                 <td> {{ session.emotional_state }}</td>
                                 <td> 
-                                    <a href="{{ url_for('main.specific_session', session_id = session.id) }}" class="btn btn-secondary">View Details</a>
+                                    <a href="{{ url_for('main.specific_session', session_id = session.id) }}" class="btn btn-secondary">Details</a>
                                 </td>
                             </tr>
                             {% endfor %}
