--- a/app/templates/patient_user/specific_session_page.html
+++ b/app/templates/patient_user/specific_session_page.html
@@ -10,7 +10,7 @@
 
 <div class="container">
     <div class="row mt-3">
-        <div class="col-6">
+        <div class="col-lg-6 col-sm-12">
             <div class="card">
                 <div class="card-header">
                     <h3 class="text-center"> Session Information </h3>
@@ -33,7 +33,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card mt-3">
+            <div class="card mt-3 mb-3">
                 <div class="card-header">
                     <h3 class="text-center"> Session Emotions </h3>
                 </div>
@@ -57,8 +57,8 @@
                 </div>
             </div>
         </div>
-        <div class="col-6">
-            <div class="card">
+        <div class="col-lg-6 col-sm-12">
+            <div class="card mb-3">
                 <div class="card-header">
                     <h3 class="text-center"> Session Emotional Distribution Chart </h3>
                 </div>
