Some general changes, mostly just to keep updated. Implement responsiveness after report draft is done

--- a/app/templates/therapist_user/therapist_dash.html
+++ b/app/templates/therapist_user/therapist_dash.html
@@ -32,7 +32,7 @@
                     <p> <strong> Number of Current Patients: </strong> {{ patient_count }} </p>
                 </div>
                 <div class="card-footer text-center">
-                    <button type="button" class="btn btn-secondary">Update User Details</button>
+                    <a href="{{ url_for('auth.update_details') }}" class="btn btn-secondary">Change User Details</a>
                 </div>
             </div>
         </div>
