--- a/app/templates/therapy/therapy_results.html
+++ b/app/templates/therapy/therapy_results.html
@@ -8,10 +8,21 @@
 
 {% block content %}
 
+<div class="flex-container" style="overflow: hidden;">
+    <div class="row">
+        <div class="col-12">
+            <div class="p-5 text-center">
+                <h1 class="mb-3"> Your Therapy Session Results</h1>
+                <h4> Review the details of your session and the expression data that was captured throughout </h4>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="container">
     <div class="row mt-3">
         <div class="col-6 ">
-            <div class="card text-center">
+            <div class="card">
                 <div class="card-header text-center">
                     <h2> Therapy Session Details </h2>
                 </div>
