--- a/app/templates/patient_user/previous_phq.html
+++ b/app/templates/patient_user/previous_phq.html
@@ -79,7 +79,7 @@
         <div class="col-6">
             <div class="card">
                 <div class="card-header text-center">
-                    <h3> Previous Captured Emotional States </h3>
+                    <h3> Previous PHQ-9 Emotional States </h3>
                 </div>
                 <div class="card-body">
                     <canvas id="emotional_state_graph_canvas"></canvas>
