--- a/app/templates/questionnaires/GAD7.html
+++ b/app/templates/questionnaires/GAD7.html
@@ -18,6 +18,17 @@
 
 {% if score and emotions %}
 
+<div class="flex-container" style="overflow: hidden;">
+    <div class="row">
+        <div class="col-12">
+            <div class="p-5 text-center">
+                <h1 class="mb-3"> GAD-7 Questionnaire Results </h1>
+                <h4> Review the results of your GAD-7 questionnaire </h4>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="container justify-content-center align-items-center mt-3">
     <div class="row">
         <div class="col-lg-6 col-sm-12">
