--- a/app/templates/questionnaires/PHQ9.html
+++ b/app/templates/questionnaires/PHQ9.html
@@ -18,15 +18,26 @@
 
 {% if score and emotions %}
 
+<div class="flex-container" style="overflow: hidden;">
+    <div class="row">
+        <div class="col-12">
+            <div class="p-5 text-center">
+                <h1 class="mb-3"> PHQ-9 Questionnaire Results </h1>
+                <h4> Review the results of your PHQ-9 questionnaire </h4>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="container justify-content-center align-items-center mt-3">
     <div class="row">
         <div class="col-lg-6 col-sm-12">
             <div class="card">
                 <div class="card-header text-center" style="width: 100%">
-                    <h3> PHQ-9 Score Results </h3>
+                    <h3 class="text-center"> PHQ-9 Score Results </h3>
                 </div>
                 <div class="card-body">
-                    <h5 class="center"> PHQ-9 Score: {{ score }} </h5>
+                    <h5 class="text-center"> PHQ-9 Score: {{ score }} </h5>
                     <p> {{ phq_message }} </p>
                 </div>
             </div>
