Requirements.txt contents added

--- a/app/templates/therapy/therapy_screen.html
+++ b/app/templates/therapy/therapy_screen.html
@@ -24,7 +24,7 @@
                     <p>
                         In order to begin a therapy session you must firstly choose the therapist whom will conduct your session.
                         This therapist will then have a record of your emotional recognition results during the session to review.
-                        Thus, it is import you make sure you select the right therapist.
+                        Thus, it is important you make sure you select the right therapist.
                     </p>
                     {% if therapist %}
                     <p>
@@ -38,7 +38,7 @@
                     </p>
                     {% endif %}
                     <p> 
-                        For best results make sure that you face forward towards the camera as the model as the application is most proficient at detecting 
+                        For best results make sure that you face forward towards the camera as the model the application is most proficient at detecting 
                         faces which are facing forward as opposed to an unconventional or a profile view.
                     </p>
                 </div>
